# streamdeck

./: Cargo.toml
icons/vlc/: vlc_playpause_pause.png2
src/: core.rs  log.rs  macros.rs  main.rs  typemap.rs
src/plugins/: audio.rs  mod.rs  obs.rs  screenshot.rs  vlc.rs
