[package]
name = "streamdeck"
version = "0.1.0"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
edition = "2021"
repository = "https://github.com/MrGunflame/streamdeck"
license = "GPL-3.0-or-later"

[dependencies]
streamdeck = "0.4.10"
image = "0.23.14"
chrono = "0.4.19"
nix = "0.23.1"
obws = "0.8.0"
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.52"
